src/objects/GADM_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Actor_Membership_Termination__c</fullName>
        <description>How many days prior to Actor termination are users notified.</description>
        <label>Actor Membership Termination</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credentials_Name__c</fullName>
        <label>Credentials Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empty_File_Size_B__c</fullName>
        <description>How &apos;big&apos; file is considered as empty file.</description>
        <label>Empty_File_Size_B</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Files_Folder__c</fullName>
        <description>Name of Files folder where pictures for dashboard categories are stored.</description>
        <label>Files Folder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Email_Contact__c</fullName>
        <label>IATA Email Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Max_File_Size_MB__c</fullName>
        <label>Max_File_Size_MB</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Files_Count__c</fullName>
        <label>Max_Files_Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permitted_File_Extensions__c</fullName>
        <label>Permitted_File_Extensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GADM Settings</label>
    <pluralLabel>GADM Settings</pluralLabel>
</CustomObject>